--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9"
@@ -19,6 +20,7 @@
     "@storybook/addon-essentials": "^7.0.6",
     "@storybook/addon-interactions": "^7.0.6",
     "@storybook/addon-links": "^7.0.6",
+    "@storybook/addon-styling": "^1.0.1",
     "@storybook/blocks": "^7.0.6",
     "@storybook/react": "^7.0.6",
     "@storybook/react-vite": "^7.0.6",
@@ -27,6 +29,8 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "prop-types": "^15.8.1",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
     "storybook": "^7.0.6",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
